styles/components/title.scss
.title {
    position: relative;
    margin-top:45%;
    @include on-breakpoint(tablet-up) {        
        left: 25%;
        margin-top: 10%;
    }
  }
  
  
  .sticker-great {
    width: 300px;
    text-align: center;
    background: var(--c-white);
    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
    transform: rotate(-3.92deg);
    margin-bottom: 25px;
  
   @include on-breakpoint(tablet-up) {
    width: 700px;
   }
  }
  
  .sticker-minds {
  margin-left: 50px;
  width: 300px;
  text-align: center;
  background: var(--c-white);
  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
  transform: rotate(-1.84deg);
  margin-bottom: 100px;
  @include on-breakpoint(tablet-up) {
    width: 700px;
   }
  }
  
  

